--- a/frontend/src/components/main/App.css
+++ b/frontend/src/components/main/App.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap');
+
 :root {
-  --bg-dark: #1a2f3a;
+  --bg-dark: #d7ecff;
   --logo-height: 100px;
   --header-height: 100px;
+  --menu-top-height: 70px;
   --aside-width: 225px;
   --footer-height: 40px;
 
@@ -11,9 +14,8 @@
 }
 
 * {
-  
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 /* Layout Grid */
@@ -49,4 +51,20 @@ main.content {
 
 footer.footer {
   grid-area: footer;
+}
+
+@media(max-width: 768px) {
+  .app {
+    grid-template-rows:
+      var(--header-height)
+      var(--menu-top-height)
+      1fr
+      var(--footer-height);
+    grid-template-columns: var(--aside-width) 1fr;
+    grid-template-areas: 
+      "logo header"
+      "menu menu"
+      "content content"
+      "footer footer";
+  }
 }
